--- a/journal/201810.md
+++ b/journal/201810.md
@@ -4,7 +4,7 @@
 
 _Also available [on Medium](https://medium.com/decred/decred-journal-october-2018-6a875424f796)_
 
-The big news of the month is the Politeia mainnet launch on October 16th, when decision-making power over the future direction of the project and Treasury funds was handed over to the stakeholder community. Congratulations to everyone and thanks to the Politeia team for the countless hours of work.
+The big news of the month is the Politeia mainnet launch on October 16th, when decision-making power over the future direction of the project and Treasury funds was handed over to the stakeholder community. Congratulations to everyone and thanks to the Politeia team for the countless hours of work. [Bitcoin Articles](bitcoinlovers.org)
 
 In a [blog post](https://blog.decred.org/2018/10/15/Politeia-in-Production/) to mark the occasion, @jy-p shared some insights from his experiences as a custodian of the [Decred Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx). He expressed optimism and interest in seeing what the Decred community would do with this power, but also cautioned about some pitfalls to be avoided and ways in which this grand governance experiment could go wrong.
 
