--- a/journal/201810.md
+++ b/journal/201810.md
@@ -18,7 +18,7 @@ A lot of mining-related improvements are [in the pipeline](https://matrix.to/#/!
 
 [dcrwallet](https://github.com/decred/dcrwallet): bug fixes.
 
-[Decrediton](https://github.com/decred/decrediton): [Version 1.3.1](https://github.com/decred/decred-binaries/releases/tag/v1.3.1) reveals SPV and Politeia functionality to all users. It also adds first batch of translations that include French, Spanish, German, Japanese and Chinese (simplified). If you are a long standing community member and notice any incorrect translations you can open an issue on GitHub or contact the team on the slack/matrix chat platforms. To ensure high quality translations, some reputation with the project is currently required to submit translation issues. At the same time, the procedures to allow input from more users are being formalized.
+[Decrediton](https://github.com/decred/decrediton): [Version 1.3.1](https://github.com/decred/decred-binaries/releases/tag/v1.3.1) reveals SPV and Politeia functionality to all users. It also adds first batch of translations that include French, Spanish, German, Japanese and Chinese (simplified). If you are a long standing community member and notice any incorrect translations you can open an issue on GitHub or contact the team on the slack/matrix chat platforms. To ensure high quality translations, some reputation with the project is currently required to submit translation issues. At the same time, the procedures to allow input from more users are being formalized. [Bitcoin Articles](https://vitcoinlovers.org) 
 
 [Politeia](https://github.com/decred/politeia): [ability](https://github.com/decred/politeia/issues/538) for admins to specify voting parameters (quorum, pass threshold and vote duration), [ability](https://github.com/decred/politeia/issues/537) to lock accounts that are abusing the system or for security reasons, [ability](https://github.com/decred/politeiagui/pull/655) to revoke proposal vote authorization. Multiple bug fixes and UI improvements. Many community members joined testing and submitted dozens of issue reports after launch.
 
