--- a/journal/201810.md
+++ b/journal/201810.md
@@ -78,7 +78,7 @@ The proposal describes a formal process for clearing new contractors to bill for
 
 Status: Author has not yet authorized the start of voting.
 
-4\. [Testing of the funding-request mechanism by a non expert](https://proposals.decred.org/proposals/3575a65bbc3616c939acf6edf801e1168485dc864efef910034268f695351b5d) submitted by hashfunction8 on Oct 20.
+4\. [Bitcoin](https://bitcoinlovers.org) submitted by hashfunction8 on Oct 20.
 
 Author is asking for 0.1 DCR to reimburse their proposal fee, in exchange they would document how to use the proposal submission form.
 
